const sqlite3 = require('sqlite3').verbose();
const path = require('path');

const dbPath = path.join(__dirname, 'database.db');
const db = new sqlite3.Database(dbPath);

// Initialize database tables
db.serialize(() => {
  // Users table
  db.run(`CREATE TABLE IF NOT EXISTS users (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    username TEXT UNIQUE NOT NULL,
    password TEXT NOT NULL,
    email TEXT UNIQUE NOT NULL,
    fullname TEXT NOT NULL,
    phone TEXT,
    address TEXT,
    role TEXT DEFAULT 'user',
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP
  )`);

  // Orders table
  db.run(`CREATE TABLE IF NOT EXISTS orders (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    user_id INTEGER NOT NULL,
    total_amount REAL NOT NULL,
    status TEXT DEFAULT 'pending',
    created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES users (id)
  )`);

  // Order items table
  db.run(`CREATE TABLE IF NOT EXISTS order_items (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    order_id INTEGER NOT NULL,
    masp TEXT NOT NULL,
    quantity INTEGER NOT NULL,
    price REAL NOT NULL,
    FOREIGN KEY (order_id) REFERENCES orders (id)
  )`);

  // Inventory table
  db.run(`CREATE TABLE IF NOT EXISTS inventory (
    masp TEXT PRIMARY KEY,
    stock INTEGER DEFAULT 25
  )`);

  // Initialize inventory for all products only if no orders exist
  const products = require('../data/products.js');
  db.get(`SELECT COUNT(*) as count FROM orders`, (err, row) => {
    if (!err && row.count === 0) {
      // Chỉ reset stock khi không có đơn hàng nào
      products.forEach(product => {
        db.run(`INSERT OR REPLACE INTO inventory (masp, stock) VALUES (?, ?)`, 
               [product.masp, 25]);
      });
    } else {
      // Nếu có đơn hàng, chỉ thêm sản phẩm mới chưa có trong inventory
      products.forEach(product => {
        db.run(`INSERT OR IGNORE INTO inventory (masp, stock) VALUES (?, ?)`, 
               [product.masp, 25]);
      });
    }
  });

  // Insert admin user if not exists
  db.get("SELECT * FROM users WHERE username = 'admin'", (err, row) => {
    if (!row) {
      db.run(`INSERT INTO users (username, password, email, fullname, role) 
              VALUES ('admin', 'adadad', 'admin@shop.com', 'Administrator', 'admin')`);
    }
  });
});

module.exports = db;